<resources>
    <string name="app_name">ShieldUs</string>
    <string name="navigation_drawer_open">Apri menu</string>
    <string name="navigation_drawer_close">Chiudi menu</string>
    <string name="chatbot_welcome_message">Ciao! Sono il chatbot legale di ShieldUs. Posso aiutarti con informazioni su discriminazioni, molestie o altri problemi lavorativi. Puoi descrivermi brevemente la tua situazione o selezionare una domanda comune dall\'elenco.</string>
    <string name="chatbot_default_response">Mi dispiace, non ho capito bene la tua situazione. Puoi descrivermela in modo più dettagliato? Oppure seleziona una domanda specifica dall\'elenco in alto.</string>
    <string name="chatbot_suggestions">Ecco alcuni argomenti su cui posso aiutarti:\n- Discriminazione sul lavoro\n- Molestie sessuali\n- Licenziamento ingiusto\n- Stipendio non pagato\n\nPuoi descrivermi la tua situazione usando queste parole chiave.</string>
    <string name="hint_type_message">Scrivi il tuo messaggio...</string>
    <string name="button_send">Invia</string>
    <string name="article_image_desc">Immagine dell\'articolo</string>
    <string name="author_image_desc">Immagine autore</string>
    <string name="share_article">Condividi articolo</string>
    <string name="emergency_violence_title">Violenza Domestica\n1522</string>
    <string name="emergency_psychological_title">Supporto Psicologico\n800 833 833</string>
    <string name="emergency_medical_title">Emergenza Medica\n118</string>
    <string name="emergency_centers_title">Centri Antiviolenza</string>
    <string name="emergency_general_title">Numero Unico Emergenza\n112</string>
    <string name="emergency_centers_message">Trova il centro antiviolenza più vicino nella nostra mappa dei servizi</string>
    <string name="confirm_call">Chiamare %s?</string>
    <string name="call_number">Stai per chiamare: %s</string>
    <string name="open_map">Apri Mappa</string>
    <string name="call">Chiama</string>
    <string name="cancel">Annulla</string>
    <string-array name="predifined_legal_questions">
        <item>Seleziona una domanda</item>
        <item>Come posso denunciare una discriminazione sul lavoro?</item>
        <item>Cosa fare in caso di molestie sessuali?</item>
        <item>Come comportarsi con un licenziamento ingiusto?</item>
        <item>Cosa fare se non mi pagano lo stipendio?</item>
    </string-array>
    <string name="search_hint">Cerca città o indirizzo...</string>
    <string-array name="service_filters">
        <item>Tutti</item>
        <item>Antiviolenza</item>
        <item>Cliniche</item>
        <item>Supporto Psicologico</item>
    </string-array>
    <string-array name="service_types">
        <item>Tipo servizio</item>
        <item>Centro antiviolenza</item>
        <item>Clinica specialistica</item>
        <item>Supporto psicologico</item>
        <item>Assistenza legale</item>
    </string-array>
    <string-array name="service_centers_data">
        <item>Centro Antiviolenza Milano|Via Roma 1, Milano|antiviolenza|+39 02 12345678</item>
        <item>Clinica Malattie Sessuali Roma|Via Colosseo 10, Roma|cliniche|+39 06 87654321</item>
        <item>Centro Donna Torino|Via Garibaldi 25, Torino|supporto psicologico|+39 011 1234567</item>
        <item>Centro Salute Roma|Via Nazionale 45, Roma|clinica|+39 06 6789123</item>
        <item>Centro Antiviolenza Milano|Corso Buenos Aires 10, Milano|antiviolenza|+39 02 3456789</item>
        <item>Consultorio Famiglie Bologna|Via Zamboni 15, Bologna|supporto psicologico|+39 051 9876543</item>
        <item>Clinica Pediatrica Napoli|Via Toledo 75, Napoli|clinica|+39 081 1122334</item>
        <item>Centro Aiuto Donne Venezia|Piazza San Marco 20, Venezia|antiviolenza|+39 041 5566778</item>
        <item>Centro Ascolto Genova|Via XX Settembre 33, Genova|supporto psicologico|+39 010 9988776</item>
        <item>Consultorio Familiare Palermo|Via Maqueda 200, Palermo|clinica|+39 091 3344556</item>
        <item>Centro Donne Bari|Corso Vittorio Emanuele 50, Bari|antiviolenza|+39 080 4433221</item>
        <item>Poliambulatorio Sociale Trento|Via del Suffragio 10, Trento|clinica|+39 0461 445566</item>
        <item>Spazio Donna Cagliari|Via Roma 99, Cagliari|supporto psicologico|+39 070 7788990</item>
        <item>Centro Sicurezza Verona|Via Mazzini 23, Verona|antiviolenza|+39 045 6677889</item>
        <item>Centro Medico Udine|Via Aquileia 75, Udine|clinica|+39 0432 776655</item>
        <item>Supporto Psicologico Parma|Borgo della Salina 11, Parma|supporto psicologico|+39 0521 445599</item>
        <item>Casa delle Donne Perugia|Via Baglioni 12, Perugia|antiviolenza|+39 075 9988774</item>
        <item>Ambulatorio Sociale Reggio Calabria|Via Marina 8, Reggio Calabria|clinica|+39 0965 112244</item>
    </string-array>
    <string-array name="article_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="article_titles">
        <item>Come riconoscere una relazione tossica</item>
        <item>Diritti sul lavoro: cosa devi sapere</item>
        <item>Sicurezza personale: consigli pratici</item>
        <item>Come denunciare violenza domestica</item>
        <item>Empowerment femminile: storie di riscatto</item>
    </string-array>
    <string-array name="article_subtitles">
        <item>Segnali e comportamenti da non sottovalutare</item>
        <item>Protezioni legali contro le discriminazioni</item>
        <item>10 strategie per proteggerti nella vita quotidiana</item>
        <item>La guida passo-passo per chiedere aiuto</item>
        <item>Donne che hanno trasformato il dolore in forza</item>
    </string-array>
    <string-array name="article_contents">
        <item>Le relazioni tossiche spesso iniziano in modo subdolo. Ecco i campanelli d\'allarme:\n\n
            • Isolamento dagli amici e familiari\n• Controllo eccessivo sulle tue attività\n
            • Critiche costanti e umiliazioni\n
            • Gelosia patologica\n\n
            Ricorda: l\'amore dovrebbe farti sentire al sicuro, non in trappola.</item>
        <item>Le lavoratrici hanno diritto a:\n\n
            • Parità di retribuzione a parità di mansioni\n
            • Maternità protetta (art. 2110 Codice Civile)\n
            • Protezione da molestie sessuali (D.Lgs. 198/2006)\n
            • Rifiutare trasferimenti ingiustificati\n\n
            Se subisci discriminazioni, contatta un sindacato o l\'ispettorato del lavoro.</item>
        <item>1. Condividi sempre la tua posizione con una persona fidata\n
            2. Impara le tecniche base di autodifesa\n
            3. Fidati del tuo istinto - se una situazione ti mette a disagio, allontanati\n
            4. Tieni sempre carico il telefono\n5. Evita percorsi isolati di notte\n\nLa prevenzione è la migliore difesa.</item>
        <item>1. Chiama il 1522 (numero antiviolenza)\n
            2. Rivolgiti a un centro antiviolenza\n
            3. Fatti accompagnare in questura per sporgere denuncia\n
            4. Fatti visitare per accertare eventuali lesioni\n
            5. Chiedi una misura protettiva (ammonimento o allontanamento)\n\n
            Non sei sola, esistono percorsi di uscita dalla violenza.</item>
        <item>Storie vere di donne che hanno superato:\n\n
            • Maria: vittima di stalking, oggi consulente per altre donne\n
            • Aisha: fuggita da matrimonio forzato, ora mediatrice culturale\n
            • Elena: sopravvissuta a violenza, fondatrice di un centro di accoglienza\n\n
            Queste storie dimostrano che il cambiamento è possibile.</item>
    </string-array>
    <string-array name="article_image_urls">
        <item>https://example.com/relazione-tossica.jpg</item>
        <item>https://example.com/diritti-lavoro.jpg</item>
        <item>https://example.com/sicurezza-personale.jpg</item>
        <item>https://example.com/denuncia-violenza.jpg</item>
        <item>https://example.com/storie-riscatto.jpg</item>
    </string-array>
    <string-array name="article_categories">
        <item>Relazioni</item>
        <item>Legale</item>
        <item>Sicurezza</item>
        <item>Emergenza</item>
        <item>Storie</item>
    </string-array>
    <string-array name="article_dates">
        <item>2023-05-15</item>
        <item>2023-06-20</item>
        <item>2023-04-10</item>
        <item>2023-07-05</item>
        <item>2023-03-08</item>
    </string-array>
    <string-array name="questions_consent">
        <item>Cos\'è il consenso?</item>
        <item>Puoi ritirare il consenso dopo averlo dato?</item>
        <item>Il consenso può essere dato sotto pressione?</item>
        <item>Chi può dare il consenso?</item>
        <item>Il silenzio equivale a consenso?</item>
    </string-array>
    <string-array name="options_consent_1">
        <item>Un accordo libero ed entusiasta</item>
        <item>Quando una persona non si oppone</item>
        <item>Qualcosa che non può essere revocato</item>
        <item>Solo necessario per il primo rapporto</item>
    </string-array>
    <string-array name="options_consent_2">
        <item>No, è valido per sempre</item>
        <item>Solo se l\'altra persona è d\'accordo</item>
        <item>Sì, in qualsiasi momento</item>
        <item>Solo entro 24 ore</item>
    </string-array>
    <string-array name="options_consent_3">
        <item>Sì, se la pressione è minima</item>
        <item>No, deve essere dato liberamente</item>
        <item>Dipende dalla situazione</item>
        <item>Solo in contesti formali</item>
    </string-array>
    <string-array name="options_consent_4">
        <item>Solo adulti sopra i 18 anni</item>
        <item>Solo persone sposate</item>
        <item>Solo donne</item>
        <item>Chiunque sia capace di intendere e volere</item>
    </string-array>
    <string-array name="options_consent_5">
        <item>Sì, sempre</item>
        <item>Dipende dalla cultura</item>
        <item>No, deve essere esplicito</item>
        <item>Solo in contesti professionali</item>
    </string-array>
    <string-array name="questions_sexual_health">
        <item>Qual è il metodo più efficace per prevenire malattie sessualmente trasmissibili?</item>
        <item>Con quale frequenza è consigliato fare controlli ginecologici?</item>
        <item>Cosa fare in caso di rapporti non protetti?</item>
        <item>Quale di questi è un sintomo che richiede controllo medico?</item>
        <item>L\'educazione sessuale dovrebbe includere:</item>
    </string-array>
    <string-array name="options_sexual_health_1">
        <item>Lavarsi dopo il rapporto</item>
        <item>Usare il preservativo correttamente</item>
        <item>Prendere la pillola anticoncezionale</item>
        <item>Avere un partner fisso</item>
    </string-array>
    <string-array name="options_sexual_health_2">
        <item>Ogni 6 mesi</item>
        <item>Ogni anno dopo i 21 anni</item>
        <item>Solo quando si hanno sintomi</item>
        <item>Ogni 5 anni</item>
    </string-array>
    <string-array name="options_sexual_health_3">
        <item>Fare test dopo 2–3 settimane</item>
        <item>Assumere antibiotici preventivi</item>
        <item>Non preoccuparsi se non ci sono sintomi</item>
        <item>Usare la pillola del giorno dopo</item>
    </string-array>
    <string-array name="options_sexual_health_4">
        <item>Perdite vaginali insolite</item>
        <item>Dolore durante i rapporti</item>
        <item>Sanguinamento irregolare</item>
        <item>Tutte le precedenti</item>
    </string-array>
    <string-array name="options_sexual_health_5">
        <item>Anatomia e fisiologia</item>
        <item>Consenso e rispetto</item>
        <item>Metodi contraccettivi</item>
        <item>Tutte le precedenti</item>
    </string-array>
</resources>